--- a/.gitignore
+++ b/.gitignore
@@ -16,5 +16,6 @@ nextflow/.nextflow.log.7
 nextflow/.nextflow.log.8
 nextflow/.nextflow.log.9
 nextflow/.nextflow
+nextflow/work
 results
 create-scaffold.bash
