--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ nextflow/.nextflow.log.8
 nextflow/.nextflow.log.9
 nextflow/.nextflow
 nextflow/work
+nextflow/trace*
+nextflow/deliverables
 results
 create-scaffold.bash
 ess.R
